# github-actions-standard-pack

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  TEST_STRATEGY.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore_request.yml  feature_request.yml
.github/workflows/: release.yaml  repo-ci.yaml  reusable-docker-build.yaml  reusable-go-ci.yaml  reusable-node-ci.yaml  reusable-playwright.yaml  reusable-python-ci.yaml  reusable-terraform-ci.yaml
adr/: ADR-0001-ci-standard-pack.md
docs/: consuming-docker-workflow.md  consuming-go-workflow.md  consuming-node-workflow.md  consuming-playwright-workflow.md  consuming-python-workflow.md  consuming-terraform-workflow.md  security-model.md  versioning.md
examples/docker-consumer/: hello.txt
examples/docker-consumer/.github/workflows/: ci.yaml
examples/go-consumer/: consumer.go  consumer_test.go  go.mod
examples/go-consumer/.github/workflows/: ci.yaml
examples/go-consumer/.tmp-go-cache/: trim.txt
examples/go-consumer/.tmp-go-cache/00/: 001cf0587c6cd767b356c6bd4e574db65f9c9ae2a289a942ce22d1d65efd7b5c-a
examples/go-consumer/.tmp-go-cache/01/: 01bdacb74b29887c7152d745cb794947a5a3b11e48b2eb47b3efd112d32fb9cc-a
examples/node-consumer/: package-lock.json  package.json
examples/python-consumer/: pyproject.toml
examples/python-consumer/.github/workflows/: ci.yaml
examples/python-consumer/src/python_consumer/: __init__.py
scripts/: validate-repo.ps1
(+723 files in other folders)
